# backend/monolith/internal/domains/driver/infrastructure/db/postgres/driver_repository.go
@@ -2,9 +2,6 @@ package postgres
 
 import (
 	"context"
-	"time"
-
-	"github.com/jackc/pgx/v5/pgtype"
 
 	"monolith/internal/domains/driver/domain/entity"
 	"monolith/internal/domains/driver/domain/repository"
@@ -24,9 +21,12 @@ func NewDriverRepository(queries *sqlc.Queries) repository.DriverRepository {
 
 func (r *DriverRepository) CreateDriver(ctx context.Context, driver *entity.Driver) (entity.DriverID, error) {
 	query := sqlc.CreateDriverParams{
-		// WorkStarts: driver.WorkStarts,
-		Column3: driver.Location.Lat,
-		Column4: driver.Location.Lon,
+		UserID:     driver.UserID,
+		Name:       driver.Name,
+		WorkStarts: driver.WorkStarts,
+		WorkEnds:   driver.WorkStarts,
+		Lat:        driver.Location.Lat,
+		Lon:        driver.Location.Lon,
 	}
 	driverID, err := r.queries.CreateDriver(ctx, query)
 	if err != nil {
@@ -50,26 +50,40 @@ func (r *DriverRepository) GetDriverByID(ctx context.Context, id entity.DriverID
 	return driver, nil
 }
 
+func (r *DriverRepository) GetDriverByUserID(ctx context.Context, userID int64) (*entity.Driver, error) {
+	row, err := r.queries.GetDriverByUserID(ctx, userID)
+	if err != nil {
+		return nil, err
+	}
+
+	driver := &entity.Driver{
+		ID:           entity.DriverID(row.ID),
+		UserID:       row.UserID,
+		Name:         row.Name,
+		ProfileImage: row.ProfileImage,
+		WorkStarts:   row.WorkStarts,
+		WorkEnds:     row.WorkEnds,
+		IsAvailable:  row.IsAvailable,
+		LastSeen:     row.LastSeen.Time,
+		Rating:       row.Rating,
+		Location:     entity.Location{Lat: row.Lat, Lon: row.Lon},
+	}
+
+	return driver, nil
+}
+
 func (r *DriverRepository) GetFilteredDrivers(ctx context.Context, filter repository.DriverFilter) ([]entity.Driver, error) {
 	params := sqlc.GetFilteredDriversParams{
-		Lat: filter.UserLocation.Lat,
-		Lon: filter.UserLocation.Lon,
+		Lat:       filter.UserLocation.Lat,
+		Lon:       filter.UserLocation.Lon,
+		MinRating: filter.MinRating,
 	}
 
 	if filter.WorkStarts != nil {
 		params.WorkStarts = db.StringToPgTime(*filter.WorkStarts)
-	} else {
-		params.WorkStarts = pgtype.Time{Valid: false}
 	}
 	if filter.WorkEnds != nil {
 		params.WorkEnds = db.StringToPgTime(*filter.WorkEnds)
-	} else {
-		params.WorkEnds = pgtype.Time{Valid: false}
-	}
-	if filter.MinRating != nil {
-		params.MinRating = pgtype.Float4{Float32: *filter.MinRating, Valid: true}
-	} else {
-		params.MinRating = pgtype.Float4{Valid: false}
 	}
 
 	rows, err := r.queries.GetFilteredDrivers(ctx, params)
@@ -81,26 +95,12 @@ func (r *DriverRepository) GetFilteredDrivers(ctx context.Context, filter reposi
 	for _, row := range rows {
 		driverID := entity.DriverID(row.ID)
 
-		var workStarts *time.Time
-		if row.WorkStarts.Valid {
-			t := time.UnixMicro(row.WorkStarts.Microseconds)
-			workStarts = &t
-		}
-
-		var workEnds *time.Time
-		if row.WorkEnds.Valid {
-			t := time.UnixMicro(row.WorkEnds.Microseconds)
-			workEnds = &t
-		}
-
-		rating := row.Rating.Float32
-
 		resp = append(resp, entity.Driver{
 			ID:         driverID,
 			Name:       row.Name,
-			WorkStarts: workStarts,
-			WorkEnds:   workEnds,
-			Rating:     &rating,
+			WorkStarts: row.WorkStarts,
+			WorkEnds:   row.WorkEnds,
+			Rating:     row.Rating,
 			Location: entity.Location{
 				Lat: row.Lat,
 				Lon: row.Lon,
