# backend/monolith/internal/domains/driver/infrastructure/db/sqlc/models.go
@@ -5,21 +5,60 @@
 package sqlc
 
 import (
+	"time"
+
 	"github.com/jackc/pgx/v5/pgtype"
 )
 
 type Driver struct {
-	ID                 uint32
-	CreatedAt          pgtype.Timestamp
-	UpdatedAt          pgtype.Timestamp
-	Name               string
-	ProfilePicturePath pgtype.Text
-	WorkStarts         pgtype.Time
-	WorkEnds           pgtype.Time
-	IsAvailable        pgtype.Bool
-	LastSeen           pgtype.Timestamptz
-	Location           interface{}
-	CityID             pgtype.Int4
-	StateID            pgtype.Int4
-	Rating             pgtype.Float4
+	ID           uint32
+	UserID       int64
+	CreatedAt    *time.Time
+	UpdatedAt    *time.Time
+	Name         string
+	ProfileImage *string
+	WorkStarts   *time.Time
+	WorkEnds     *time.Time
+	IsAvailable  bool
+	LastSeen     pgtype.Timestamptz
+	Location     interface{}
+	CityID       *int32
+	StateID      *int32
+	Rating       *float32
+}
+
+type DriverRealtime struct {
+	DriverID            int64
+	UpdatedAt           *time.Time
+	RealtimeLocation    interface{}
+	AverageSpeed        *float32
+	PredictedBearing    *float32
+	CoarseH3            interface{}
+	DestinationLocation interface{}
+	DestinationTime     *time.Time
+}
+
+type Session struct {
+	TokenHash string
+	SessionID pgtype.UUID
+	UserID    int64
+	CreatedAt time.Time
+	ExpiresAt time.Time
+	Roles     []string
+}
+
+type User struct {
+	ID           int64
+	CreatedAt    time.Time
+	UpdatedAt    *time.Time
+	DeletedAt    *time.Time
+	Phone        *string
+	Email        *string
+	ProfileImage *string
+}
+
+type UserOauthLink struct {
+	UserID     int64
+	Provider   string
+	ProviderID string
 }
