# backend/monolith/internal/domains/driver/interface/http/router.go
@@ -4,13 +4,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterDriverRoutes(router *gin.RouterGroup, h *DriverHandler) {
+func RegisterDriverRoutes(router *gin.RouterGroup, h *DriverHandler, authMiddleware gin.HandlerFunc) {
 	driver := router.Group("/driver")
 	{
 		driver.POST("/", h.CreateDriver)
 		driver.GET("/:id", h.GetDriverByID)
 		driver.POST("/filter", h.GetFilteredDrivers)
-		// driver.PUT("/")
-		// driver.DELETE("/")
+
+		profile := driver.Group("/profile")
+		profile.Use(authMiddleware)
+		{
+			profile.POST("/", h.CreateDriverProfile)
+			profile.GET("/", h.GetMyDriverProfile)
+		}
 	}
 }
